--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,21 @@
   padding: 10px;
 }
 
+.carousel {
+  background: #512DA8;
+}
+
+.carousel-item {
+  height: 250px;
+}
+
+.carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+}
+
 
 
 
