--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   margin: 0px auto;
   padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge;
-  min-height: 400px;
+  min-height: 250px;
 }
 
 .footer {
@@ -45,12 +45,18 @@
 }
 
 .carousel-item {
-  height: 300px;
+  height: 240px;
 }
 
 .carousel-item img {
   position: absolute;
   top: 0;
   left: 0;
-  min-height: 300px;
+  min-height: 240px;
+}
+
+#carouselButtons {
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
 }
