--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,54 +1,60 @@
 .row-header {
   margin: 0px auto;
-  padding: 0px 0px;
+  padding: 0px auto;
 }
+
 .row-content {
   margin: 0px auto;
-  padding: 50px 0px;
+  padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge;
-  min-height: 400px;
+  min-height: 250px;
 }
+
 .footer {
   background-color: #D1C4E9;
   margin: 0px auto;
-  padding: 20px 0px;
+  padding: 20px 0px 20px 0px;
 }
+
 .jumbotron {
+  padding: 85px 50px 35px 50px;
   margin: 0px auto;
-  padding: 70px 30px;
   background: #9575CD;
   color: floralwhite;
 }
-address {
+
+.address {
   font-size: 80%;
   margin: 0px;
   color: #0f0f0f;
 }
-body {
-  padding: 50px 0px 0px 0px;
-  z-index: 0;
-}
+
 .navbar-dark {
   background-color: #512DA8;
 }
+
 .tab-content {
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   padding: 10px;
 }
+
 .carousel {
   background: #512DA8;
 }
-.carousel .carousel-item {
-  height: 300px;
+
+.carousel-item {
+  height: 240px;
 }
-.carousel .carousel-item img {
+
+.carousel-item img {
   position: absolute;
   top: 0;
   left: 0;
-  min-height: 300px;
+  min-height: 240px;
 }
+
 #carouselButton {
   right: 0px;
   position: absolute;
