--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,3 +73,16 @@ body{
     position: absolute;
     bottom: 0px;
 }
+
+.modal-header {
+	background-color: $background-dark;
+	color: floralwhite;
+
+	.close {
+		color: floralwhite;
+	}
+}
+
+.modal-body {
+	background-color: $background-pale;
+}
